--- a/src/tools/core/styles/editor.css
+++ b/src/tools/core/styles/editor.css
@@ -3,6 +3,44 @@
 	font-size: 20px;
 }
 
+.__reacteditor.core .block_component{
+	padding: .7em 0;
+}
+
+.__reacteditor .header {
+	font-weight: bold;
+}
+
+.__reacteditor .header.level--1 {
+	font-size: 2em;
+	margin-block-start: 0.67em;
+	margin-block-end: 0.67em;
+}
+
+.__reacteditor .header.level--2 {
+	font-size: 1.5em;
+	margin-block-start: 0.83em;
+	margin-block-end: 0.83em;
+}
+
+.__reacteditor .header.level--3 {
+	font-size: 1.17em;
+	margin-block-start: 1em;
+	margin-block-end: 1em;
+}
+
+.__reacteditor .header.level--4 {
+	font-size: 1em;
+	margin-block-start: 1.33em;
+	margin-block-end: 1.33em;
+}
+
+.__reacteditor .header.level--5 {
+	font-size: 0.83em;
+	margin-block-start: 1.67em;
+	margin-block-end: 1.67em;
+}
+
 .__reacteditor.core.mini {
 	margin: auto;
 	max-width: 800px;
@@ -20,7 +58,6 @@
 
 .__reacteditor.block {
 	border-radius: 5px;
-	line-height: 1.6em;
 }
 
 .__reacteditor.block.focused {
